# FlintSense

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
flint-bridge/: Cargo.toml  README.md
flint-bridge/.cargo/: config.toml
flint-bridge/src/: main.rs
flint-debug/: Cargo.toml  README.md
flint-debug/src/: main.rs
flint-gateway/: Cargo.toml
flint-gateway/src/: main.rs
flint-hardware/: main.py  pyproject.toml
flint-hardware/enclosure/: README.md  flint_enclosure.py
flint-hardware/enclosure/exports/: anemometer_mount.step  anemometer_mount.stl  assembly_exploded.step  assembly_exploded.stl  enclosure_body.step  enclosure_body.stl  lid.step  lid.stl  pole_clamp_assembly.step  pole_clamp_assembly.stl  pole_clamp_half.step  pole_clamp_half.stl  rain_sensor_bracket.step  rain_sensor_bracket.stl  solar_bracket.step  solar_bracket.stl
flint-node/: Cargo.toml  README.md  build.rs  flasher.sh
flint-node/.cargo/: config.toml
flint-node/src/: main.rs
flint-proto/: Cargo.toml  README.md
flint-proto/src/: lib.rs
flint-ui/: Cargo.toml  config.json  rust-toolchain.toml
flint-ui/.cargo/: config.toml
flint-ui/src/: main.rs
flint-ui/ui/: main.slint  theme.slint  weather.slint  widgets.slint
openspec/: config.yaml
openspec/changes/archive/2026-06-26-flint-bridge-usb-frame-protocol/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-26-flint-bridge-usb-frame-protocol/specs/bridge-control/: spec.md
openspec/changes/archive/2026-06-26-flint-bridge-usb-frame-protocol/specs/bridge-frame-protocol/: spec.md
openspec/specs/bridge-control/: spec.md
openspec/specs/bridge-frame-protocol/: spec.md
