[workspace]
# Host-side crates only — these build together for the host/deploy triple.
# flint-proto is no_std and shared with the firmware crates by path dependency.
members = [
    "flint-proto",
    "flint-gateway",
    "flint-ui",
]
# The firmware crates are standalone workspaces: they target different MCUs
# (flint-node → nRF52840/thumbv7em, flint-bridge → ESP32/xtensa) with their own
# toolchains, build-std settings, and mutually-exclusive critical-section / embassy
# arch features that cannot share one unified dependency graph.
# Build each independently: cd flint-node && cargo build
exclude = ["flint-node", "flint-bridge"]
resolver = "2"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
