[package]
name = "flint-node"
version = "0.1.0"
edition = "2024"
description = "LoRa sensor node firmware for RAK4631 (nRF52840 + SX1262)"
readme = "README.md"

[[bin]]
name = "flint-node"
path = "src/main.rs"

[dependencies]
flint-proto = { path = "../flint-proto" }

# Embassy + nRF52840 HAL
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf      = { version = "0.10", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-time     = { version = "0.5" }

# LoRa radio driver — SX1262 on RAK4631
lora-phy         = { version = "3" }

# SPI device abstraction (SpiBus + CS pin → SpiDevice for lora-phy)
embedded-hal-bus = { version = "0.2", features = ["async"] }

# Logging / panic via RTT + probe-rs
defmt       = { version = "0.3" }
defmt-rtt   = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Cortex-M runtime
cortex-m    = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
