[package]
name = "flint-node"
version = "0.1.0"
edition = "2024"
description = "LoRa sensor node firmware for RAK4631 (nRF52840 + SX1262)"
readme = "README.md"

[[bin]]
name = "flint-node"
path = "src/main.rs"

[dependencies]
flint-proto = { path = "../flint-proto" }

# Embassy + nRF52840 HAL
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf      = { version = "0.10", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-time     = { version = "0.5" }
embassy-sync     = { version = "0.8" }

# LoRa radio driver — SX1262 on RAK4631
lora-phy         = { version = "3" }

# BME680 environmental sensor (RAK1906 WisBlock module)
bosch-bme680     = { version = "1", features = ["embedded-hal-async"] }

# SPI device abstraction (SpiBus + CS pin → SpiDevice for lora-phy)
embedded-hal-bus = { version = "0.2", features = ["async"] }

# Logging via RTT + probe-rs. Panic handling is a custom LED-blink handler in
# main.rs so failures are visible on bare USB / battery power (no probe attached).
# Non-blocking RTT: log writes are dropped (not stalled) when no host is draining
# the buffer, so the firmware runs normally on standalone/battery power.
defmt       = { version = "0.3" }
defmt-rtt   = { version = "0.4", features = ["disable-blocking-mode"] }

# Cortex-M runtime
cortex-m    = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
